[package]
name = "ergonames-sync-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
hex = "0.4.3"
postgres = "0.19.3"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.91"
sigma-util = "0.10.0"